security_group.tf
# アプリ全体用
resource "aws_security_group" "app" {
  name        = "${var.rsrc_prefix}-app-sg"
  description = "${var.rsrc_prefix}-app-sg"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.rsrc_prefix}-app-sg"
  }
}

# ロードバランサー用
resource "aws_security_group" "alb" {
  name        = "${var.rsrc_prefix}-alb-sg"
  description = "${var.rsrc_prefix}-alb-sg"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.rsrc_prefix}-alb-sg"
  }
}

# データベース用
resource "aws_security_group" "db" {
  name        = "${var.rsrc_prefix}-db-sg"
  description = "${var.rsrc_prefix}-db-sg"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.rsrc_prefix}-db-sg"
  }
}
